--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,15 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "import/no-dynamic-require": 0,
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }]
+  }
+}
+
+/* "import/no-dynamic-require": 0,
     "quote-props": ["error", "consistent"],
     "quotes": "off",
-    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "comma-dangle": ["error", "never"],
     "no-unused-vars": "off",
     "func-names": ["error", "never"],
     "consistent-return": "off",
-    "linebreak-style": "off"
-  }
-}
+    "linebreak-style": "off" */
